js/js.translator/testData/incremental/invalidation/companionProperties/lib1/l1.9.kt
class MyClass {
    companion object {
        konst intProperty: Int
            inline get() = 5
    }
}
